Fixed light and dark mode

--- a/nba/static/nba/light.css
+++ b/nba/static/nba/light.css
@@ -11,13 +11,6 @@ p, span, small{
 }
 
 #box{
-	width: 400px;
-	margin: 0 auto;
-	margin-top: 100px;
-	border: 2px solid #e7e7e7;
-	border-radius: 5px;
-	text-align: center;
-	padding: 20px;
 	background-color: #F8F8F8!important;
 }
 
